<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/save_panel"
        android:layout_alignParentTop="true"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/title_po_number"
                style="@style/titleTextVeiw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:text="PO # 12345" />

            <RelativeLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title_po_number"
                android:layout_marginTop="5dp"
                android:padding="24dp" >

                <LinearLayout
                    android:id="@+id/carrier_panel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        style="@style/headerTextVeiw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/carrier_text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#305196" />

                    <Spinner
                        android:id="@+id/carrier_dropdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="140dp"
                        android:prompt="@string/prompt_carrier" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/warehouse_no_panel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/carrier_panel"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical" >

                    <TextView
                        style="@style/headerTextVeiw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warehouse_num_text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#305196" />

                    <Spinner
                        android:id="@+id/warehouse_no_dropdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="140dp"
                        android:prompt="@string/prompt_warehouse" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/status_panel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/warehouse_no_panel"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical" >

                    <TextView
                        style="@style/headerTextVeiw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#305196" />

                    <Spinner
                        android:id="@+id/status_dropdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="140dp"
                        android:prompt="@string/prompt_status" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/save_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logout_bottom_panel"
        android:background="@color/bg_violt_light"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone" >

        <Button
            android:id="@+id/save_n_continue_button"
            style="@style/button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/save_continue" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/logout_bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/action_bar_bg"
        android:gravity="center_vertical"
        android:padding="3dp" >

        <Button
            android:id="@+id/cancel_button"
            style="@style/logoutButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/cancel_text" />

        <Button
            android:id="@+id/logout_button"
            style="@style/logoutButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/cancel_button"
            android:layout_alignBottom="@+id/cancel_button"
            android:layout_alignParentRight="true"
            android:text="@string/logout_text" />
    </RelativeLayout>

</RelativeLayout>