<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg" >

        <EditText
            android:id="@+id/search_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/search_edit_text_bg"
            android:drawableLeft="@drawable/ic_action_search"
            android:hint="@string/hint_search_purchase_order"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="4" >

        <TextView
            android:id="@+id/list_header"
            style="@style/headerTextVeiw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/purchase_order_num_text" />

        <TextView
            android:id="@+id/timeHeaderTextView"
            style="@style/headerTextVeiw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/eta_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/header"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/divider_line_color" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_panel"
        android:layout_below="@id/divider"
        android:fastScrollEnabled="true"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >
    </ListView>

    <RelativeLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#305196"
        android:gravity="center_vertical"
        android:padding="3dp" >

        <Button
            android:id="@+id/cancel_button"
            style="@style/logoutButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/cancel_text" />

        <Button
            android:id="@+id/logout_button"
            style="@style/logoutButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/logout_text" />
    </RelativeLayout>

</RelativeLayout>