<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true" >

    <LinearLayout
        android:id="@+id/poreject_title_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_title"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:id="@+id/title_po_number"
            style="@style/titleTextVeiw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="PO # 12345" />

        <TextView
            android:id="@+id/title_trucking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="ABC Trucking"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rejected_order_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/poreject_title_panel"
        android:background="@color/light_gray"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="2" >

        <TextView
            android:id="@+id/item_name_textview"
            style="@style/listItemBoldText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="Fuji Apples" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/item_details_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="washington 8 oz"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/contact_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="009418423"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/logout_panel"
        android:layout_below="@+id/rejected_order_details"
        android:orientation="vertical"
        android:padding="15dp" >

        <Button
            android:id="@+id/quality_control_button"
            style="@style/button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/quality_control_details" />

        <Button
            android:id="@+id/trail_temp_button"
            style="@style/button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/trail_temp_range" />

        <Button
            android:id="@+id/defects_button"
            style="@style/button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/defects" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/logout_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/action_bar_bg"
        android:gravity="center_vertical"
        android:padding="2dp" >

        <!-- don't add any child -->
    </FrameLayout>

</RelativeLayout>